# launch-monitor

./: .gitignore  CMakeLists.txt  README.md
backend/: CMakeLists.txt
backend/src/: main.cpp
include/: calculate.h  config.h  detect.h
src/: calculate.cpp  detect.cpp  main.cpp
